--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.0.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.23.0",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.2",
     "smooth-scroll": "^16.1.3"
   },
