--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "firebase": "^8.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-charts": "^3.0.15",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.2",
-    "smooth-scroll": "^16.1.3",
-    "react-modal": "^3.14.3"
-
+    "smooth-scroll": "^16.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
