--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
   "name": "landingpage-react-template",
   "private": true,
+  "proxy": "https://farmers-assistant-backend.herokuapp.com",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.23.0",
+    "counterpart": "^0.18.6",
     "emailjs-com": "^2.6.4",
     "firebase": "^8.9.1",
-    "react": "^17.0.1",
+    "i18next": "^21.6.7",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
+    "react-i18next": "^11.15.3",
+    "react-interpolate-component": "^0.12.0",
+    "react-loader-spinner": "^4.0.0",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.2",
+    "react-translate-component": "^0.15.1",
     "smooth-scroll": "^16.1.3"
   },
   "scripts": {
