--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-i18next": "^11.15.3",
     "react-interpolate-component": "^0.12.0",
     "react-loader-spinner": "^4.0.0",
+    "react-material-ui-carousel": "^3.2.0",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.2",
