--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.2",
+    "react-simple-modal-slideshow": "^1.0.1",
     "react-translate-component": "^0.15.1",
     "smooth-scroll": "^16.1.3"
   },
