--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "counterpart": "^0.18.6",
     "emailjs-com": "^2.6.4",
     "firebase": "^8.9.1",
     "i18next": "^21.6.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
     "react-i18next": "^11.15.3",
